# PZSA

./: .env.example  .gitignore  Dockerfile  Dockerfile.base  README.md  btrack.yaml  docker-compose.yml  pyproject.toml
PZSA/configs/: Dockerfile  __init__.py  logging_cfg.py  pyproject.toml
PZSA/configs/src/: database_cfg.py  kafka_cfg.py
PZSA/controller/: Dockerfile  __init__.py  pyproject.toml
PZSA/controller/src/: violation_controller.py
PZSA/data/: Dockerfile  __init__.py  database_manager.py  entities.py  pyproject.toml
PZSA/data/src/: crud.py  database_manager.py  entities.py
PZSA/services/controller/: __init__.py  violation_controller.py
PZSA/services/detection/detector/: Dockerfile  pyproject.toml
PZSA/services/detection/detector/src/: detect.py
PZSA/services/detection/violation_checker/: Dockerfile  check_violation.py  pyproject.toml
PZSA/services/detection/violation_checker/src/: check_violation.py  utils.py
PZSA/services/frame_reader/: Dockerfile  pyproject.toml  read.py
PZSA/services/streaming/: Dockerfile  pyproject.toml  stream.py
PZSA/ui/: Dockerfile  app.py  index.html  pyproject.toml
PZSA/ui/src/: app.py
scripts/: run.sh  setup.sh  topics.sh  topics_docker.sh
