[project]
name = "PZSA"
version = "0.1.0"
requires-python = ">=3.12"
readme='README.md'

[tool.uv.workspace]
members = ["PZSA/*", 
          "PZSA/services/streaming",
          "PZSA/services/frame_reader", 
          "PZSA/services/detection/detector", 
          "PZSA/services/detection/violation_checker"]

exclude = ["PZSA/services"]